# fern-shell

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TROUBLESHOOTING.md  flake.nix
.github/workflows/: ci.yml  docs.yml
book/: book.toml
book/src/: SUMMARY.md
book/src/01-getting-started/: README.md  installation.md  quick-tour.md
book/src/02-user-guide/: README.md  config.md  modules.md  theming.md
book/src/03-qml-components/: README.md  bar.md  border.md  modules.md  theme.md
book/src/04-developer-guide/: README.md  adding-modules.md  architecture.md  rust-services.md  testing.md
book/src/05-api-reference/: README.md  fern-obs.md
book/theme/: custom.css
crates/fern-core/: Cargo.toml
crates/fern-core/src/: config.rs  error.rs  lib.rs  paths.rs  state.rs
crates/fern-obs/: Cargo.toml
crates/fern-obs/src/: client.rs  config.rs  daemon.rs  error.rs  lib.rs  main.rs  state.rs
crates/fern-theme/: Cargo.toml
crates/fern-theme/src/: lib.rs  main.rs
crates/fern-theme/src/adapters/: mod.rs
crates/fern-theme/src/commands/: convert.rs  mod.rs  query.rs  validate.rs  watch.rs
crates/fern-theme/src/domain/: mod.rs  theme.rs
crates/fern-theme/src/domain/tokens/: color.rs  mod.rs  radius.rs  spacing.rs  typography.rs
crates/fern-theme/src/error/: config.rs  mod.rs  notify.rs  severity.rs
crates/fern-theme/src/ports/: inbound.rs  outbound.rs
crates/fernctl/: Cargo.toml
crates/fernctl/src/: error.rs  lib.rs  main.rs
crates/fernctl/src/adapters/: mod.rs  service_control.rs  shell_ipc.rs  state_watcher.rs
crates/fernctl/src/cli/: logs.rs  mod.rs  obs.rs  reload.rs  status.rs  theme.rs
crates/fernctl/src/domain/: action.rs  app.rs  log.rs  mod.rs  service.rs
crates/fernctl/src/tui/: app.rs  event.rs  layout.rs  mod.rs
crates/fernctl/src/tui/widgets/: config_panel.rs  help_panel.rs  logs_panel.rs  mod.rs  services_panel.rs
docs/: roadmap.md
docs/architecture/: ADR-001-service-communication.md  mcp-server.md  services-context.md
docs/archive/: claude-integration.md
docs/guides/: CLAUDE_GUIDE.md
docs/vision/: ai-augmented-desktop.md  worktree-orchestrator.md
fern/: CLAUDE.md  config.toml  shell.qml
fern/bar/: Backgrounds.qml  Bar.qml  BarInteractions.qml  BarWrapper.qml  Border.qml  qmldir
fern/components/: CLAUDE.md  ModuleContainer.qml  StyledRect.qml  qmldir
fern/config/: CLAUDE.md  ConfigLoader.qml  Theme.qml  qmldir
fern/drawers/: DrawerBackground.qml  DrawerController.qml  DrawerPanel.qml  DrawerWrapper.qml  Drawers.qml  ObsContent.qml  SessionContent.qml  qmldir
fern/drawers/backgrounds/: BottomBackground.qml  LeftBackground.qml  RightBackground.qml  TopBackground.qml  qmldir
fern/modules/: CLAUDE.md  Clock.qml  Obs.qml  Power.qml  Tray.qml  Workspaces.qml  qmldir
fern/services/: CLAUDE.md  Hyprland.qml  Log.qml  Obs.qml  Tick.qml  qmldir
fernctl/: Cargo.toml
fernctl/src/: lib.rs  main.rs
fernctl/src/adapters/: mod.rs
fernctl/src/commands/: query.rs
fernctl/src/domain/: mod.rs  theme.rs  user_config.rs
fernctl/src/domain/tokens/: color.rs  spacing.rs  typography.rs
fernctl/src/error/: config.rs  mod.rs  notify.rs  severity.rs
fernctl/src/ports/: inbound.rs  mod.rs
flake-parts/: CLAUDE.md  checks.nix  dev.nix  pkgs.nix
flake-parts/modules/: fonts.nix  home.nix  system.nix
scripts/: fern-config-watch
tests/: CLAUDE.md
