[package]
name = "fernctl"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Fern Shell Contributors"]
description = """
A type-safe design token system and configuration manager for Fern Shell.

fernctl provides compile-time guarantees for design system correctness through
Rust's type system, ensuring that color roles, spacing scales, and component
specifications are valid before runtime.
"""
license = "MIT"
repository = "https://github.com/adanoelle/fern-shell"
keywords = ["design-system", "design-tokens", "wayland", "shell", "configuration"]
categories = ["config", "gui", "command-line-utilities"]

[features]
default = ["cli", "fancy-errors"]
# Enable CLI binary
cli = ["dep:clap"]
# Enable fancy miette error output
fancy-errors = ["miette/fancy"]
# Enable file watching
watch = ["dep:notify", "dep:notify-debouncer-mini"]
# Enable D-Bus IPC
dbus = ["dep:zbus"]

[dependencies]
# === Error Handling ===
# thiserror: Derive macros for std::error::Error with zero runtime cost
thiserror = "2.0"
# miette: Rich diagnostic errors with source snippets and suggestions
miette = { version = "7.2", default-features = false, features = ["derive"] }

# === Serialization ===
# serde: The standard serialization framework
serde = { version = "1.0", features = ["derive"] }
# serde_json: JSON support for QML config output
serde_json = "1.0"
# toml: TOML parsing for user configuration files
toml = "0.8"

# === CLI (optional) ===
# clap: Command-line argument parsing with derive macros
clap = { version = "4.5", features = ["derive", "env", "wrap_help"], optional = true }

# === File Watching (optional) ===
# notify: Cross-platform file system notifications
notify = { version = "6.1", optional = true }
# notify-debouncer-mini: Debounce rapid file change events
notify-debouncer-mini = { version = "0.4", optional = true }

# === IPC (optional) ===
# zbus: D-Bus client for Linux desktop integration
zbus = { version = "4.4", optional = true }

# === Utilities ===
# strsim: String similarity for "did you mean?" suggestions
strsim = "0.11"
# dirs: Standard directory paths (XDG on Linux)
dirs = "5.0"
# once_cell: Lazy static initialization
once_cell = "1.19"

[dev-dependencies]
# For property-based testing of token validation
proptest = "1.4"
# For snapshot testing of error messages
insta = { version = "1.38", features = ["json"] }
# Async runtime for D-Bus tests
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster incremental builds
debug = 1

[[bin]]
name = "fernctl"
path = "src/main.rs"
required-features = ["cli"]

[lints.rust]
# Deny unsafe code - this crate has no need for it
unsafe_code = "forbid"
# Warn on missing docs - we want comprehensive documentation
missing_docs = "warn"

[lints.clippy]
# Pedantic lints for high-quality code
pedantic = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Nursery lints we want
nursery = { level = "warn", priority = -1 }
# Deny footguns
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
